errPropag6: Added new test for StiTrackNode::errPropag6 function

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,3 +34,7 @@ include_directories(
 )
 
 link_directories( ${ROOT_LIBRARY_DIR} )
+
+
+add_executable(test-StiTrackNode-errPropag6 test-StiTrackNode-errPropag6/main.cxx)
+target_link_libraries(test-StiTrackNode-errPropag6 rt pthread)
