--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,3 +47,6 @@ add_executable(test-StiTrackNode-errPropag6 test-StiTrackNode-errPropag6/main.cx
 target_link_libraries(test-StiTrackNode-errPropag6 rt pthread)
 
 add_executable(test-StiTrackNode-errPropag6-vs-trasat-output test-StiTrackNode-errPropag6/main-errPropag6-vs-trasat-output.cxx)
+
+add_executable(test-StiTrackNodeHelper-joinTwo test-StiTrackNodeHelper-joinTwo/main.cxx)
+target_link_libraries(test-StiTrackNodeHelper-joinTwo rt pthread)
