cmake: build misc/matrix_pack_unpack

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,6 +42,7 @@ target_link_libraries(float_vs_double rt pthread)
 
 add_executable(std_function misc/std_function.cxx)
 add_executable(std_chrono misc/std_chrono.cxx)
+add_executable(matrix_pack_unpack misc/matrix_pack_unpack.cxx)
 
 add_executable(test-StiTrackNode-errPropag6 test-StiTrackNode-errPropag6/main.cxx)
 target_link_libraries(test-StiTrackNode-errPropag6 rt pthread)
