--- a/docker/cache-test/Dockerfile
+++ b/docker/cache-test/Dockerfile
@@ -3,8 +3,7 @@ FROM ubuntu:18.04
 WORKDIR /tmp
 
 # Install system packages
-COPY packages.ubuntu /tmp/packages
 RUN apt-get update -qq \
- && apt-get -y install $(cat packages) \
+ && apt-get -y install g++ gcc gfortran \
  && apt-get clean \
  && rm -rf /var/lib/apt/lists/* /tmp/*
