Revert "[docker] Specify packages inside Dockerfile"
This reverts commit b53050dba16d31d58ffa7159dc0da96a45def6dc.

--- a/docker/cache-test/Dockerfile
+++ b/docker/cache-test/Dockerfile
@@ -3,7 +3,8 @@ FROM ubuntu:18.04
 WORKDIR /tmp
 
 # Install system packages
+COPY packages.ubuntu /tmp/packages
 RUN apt-get update -qq \
- && apt-get -y install g++ gcc gfortran \
+ && apt-get -y install $(cat packages) \
  && apt-get clean \
  && rm -rf /var/lib/apt/lists/* /tmp/*
