--- a/docker/cache-test/Dockerfile
+++ b/docker/cache-test/Dockerfile
@@ -4,7 +4,10 @@ WORKDIR /tmp
 
 # Install system packages
 COPY packages.ubuntu /tmp/packages
-RUN apt-get update -qq \
- && apt-get -y install $(cat packages) \
+
+RUN PACKAGES=$(tr '\n' ' ' < /tmp/packages) \
+ && echo "PACKAGES: $PACKAGES" \
+ && apt-get update -qq \
+ && apt-get -y install $PACKAGES \
  && apt-get clean \
  && rm -rf /var/lib/apt/lists/* /tmp/*
