--- a/docker/cache-test/Dockerfile
+++ b/docker/cache-test/Dockerfile
@@ -6,7 +6,7 @@ COPY packages.ubuntu /tmp/packages
 
 #ENV PACKAGES="$(tr '\\n' ' ' < tmp/packages)"
 
-RUN PACKAGES=$(tr '\n' ' ' < /tmp/packages) \
+RUN PACKAGES=$(cat packages) \
  && echo "PACKAGES: $PACKAGES" \
  && apt-get update -qq \
  && apt-get -y install $PACKAGES \
