--- a/docker/cache-test/Dockerfile
+++ b/docker/cache-test/Dockerfile
@@ -7,8 +7,8 @@ COPY packages.ubuntu /tmp/packages
 #ENV PACKAGES="$(tr '\\n' ' ' < tmp/packages)"
 
 RUN PACKAGES=$(cat packages) \
- && echo "PACKAGES: $PACKAGES" \
- && apt-get update -qq \
- && apt-get -y install $PACKAGES \
- && apt-get clean \
- && rm -rf /var/lib/apt/lists/* /tmp/*
+ && echo "PACKAGES: $PACKAGES"
+# && apt-get update -qq \
+# && apt-get -y install $PACKAGES \
+# && apt-get clean \
+# && rm -rf /var/lib/apt/lists/* /tmp/*
