--- a/docker/cache-test/Dockerfile
+++ b/docker/cache-test/Dockerfile
@@ -4,7 +4,9 @@ WORKDIR /tmp
 
 COPY packages.ubuntu /tmp/packages
 
-RUN tr '\n' ' ' < /tmp/packages | (read PACKAGES; echo "XXX $PACKAGES")
+#RUN tr '\n' ' ' < /tmp/packages | (read PACKAGES; echo "XXX $PACKAGES")
+
+RUN apt-get update -qq && tr '\n' ' ' < /tmp/packages | (read PACKAGES; apt-get -y install $PACKAGES)
 
 RUN echo "YYY PACKAGES: $PACKAGES"
 
