--- a/docker/cache-test/Dockerfile
+++ b/docker/cache-test/Dockerfile
@@ -5,4 +5,5 @@ ARG MYARG
 WORKDIR /tmp
 
 COPY packages.ubuntu5 /tmp/packages
+COPY packages.ubuntu /tmp/packages
 COPY packages.${MYARG} /tmp/packages
