--- a/docker/cache-test/Dockerfile
+++ b/docker/cache-test/Dockerfile
@@ -4,6 +4,7 @@ ARG MYARG
 
 WORKDIR /tmp
 
+COPY Dockerfile /tmp/
 COPY packages.ubuntu5 /tmp/packages
 COPY packages.ubuntu /tmp/packages
 COPY packages.${MYARG} /tmp/packages
